--- a/public/projects.html
+++ b/public/projects.html
@@ -14,7 +14,7 @@
     <!-- Materialize icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link href="styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -40,63 +40,13 @@
     <main>
         <div class="container">
             <div class="row" id="projects">
-                <!-- <div class="col l4 s12 m7">
-                    <div class="card">
-                      <h1 class="card-title center"> Project 1 </h1>
-                      <div class="card-image">
-                        <img src="assets/strategy.png" style="height: 50%; width: 50%; padding-right: 5px; padding-left: 5px;">
-                      </div>
-                      <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="https://github.com/alexbonti/node-material"><img
-                          src="assets/github.png" style="height: 20px; padding-right: 15px;"></i>Checkout the project !</a>
-                      </div>
-                    </div>
-                  </div> -->
-                  <!-- <div class="col l4 s12 m7">
-                    <div class="card">
-                      <h1 class="card-title center"> Project 1 </h1>
-                      <div class="card-image">
-                        <img src="assets/strategy.png" style="height: 50%; width: 50%; padding-right: 5px; padding-left: 5px;">
-                      </div>
-                      <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="https://github.com/alexbonti/node-material"><img
-                          src="assets/github.png" style="height: 20px; padding-right: 15px;"></i>Checkout the project !</a>
-                      </div>
-                    </div>
-                  </div> -->
-                  <!-- <div class="col l4 s12 m7">
-                    <div class="card">
-                      <h1 class="card-title center"> Project 1 </h1>
-                      <div class="card-image">
-                        <img src="assets/strategy.png" style="height: 50%; width: 50%; padding-right: 5px; padding-left: 5px;">
-                      </div>
-                      <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="https://github.com/alexbonti/node-material"><img
-                          src="assets/github.png" style="height: 20px; padding-right: 15px;"></i>Checkout the project !</a>
-                      </div>
-                    </div>
-                  </div> -->
-                </div>
+            </div>
           </div>
     </main>
     <footer class="page-footer">
-        <div class="footer-copyright">
             <div class="container center">
                 © 2021 Copyright Arun Kumar
             </div>
-        </div>
     </footer>
 
     <!-- socket IO Served by the server -->
@@ -110,7 +60,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script src="env.js"></script>
+    <script type="module" src="/js/projects/projects.js"></script>
 
 </body>
 
